--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bent": "^7.3.9",
     "discord.js": "^12.3.1",
+    "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^5.2.1"
   },
