--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "discord.js": "^12.3.1",
     "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.1"
   },
   "scripts": {
     "start": "node app.js",
