--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bent": "^7.3.9",
     "discord.js": "^12.3.1",
     "npm-run-all": "^4.1.5",
+    "proxylist": "^1.0.2",
     "puppeteer": "^5.2.1",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.1"
@@ -28,6 +29,7 @@
     "url": "https://github.com/Ramo-94/bot-dot/issues"
   },
   "homepage": "https://github.com/Ramo-94/bot-dot#readme",
-  
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
